Sectors updated in api -for api api/sectors/{sector-name}